# LSQMultivariateSpline

./: .gitignore  pyproject.toml
benchmarks/: bench_lsq_multivariate.py
docs/source/: conf.py  index.rst  lsq_multivariate_spline.rst
src/lsq_multivariate_spline/: __init__.py  _lsq_multivariate.py  _solver.py  _validation.py
tests/: 1dSplineTest.py  2dSplineTest.py  test_lsq_multivariate_core.py  test_lsq_multivariate_features.py
tests/data/: noisy_spline_1d.csv  noisy_spline_2d.csv  noisy_spline_3d.csv  noisy_spline_4d.csv  plot_noisy_spline_data.py
